# hw_13_se

django_hw/hw_project/: .example.env  db.sqlite3  pyproject.toml  requirements.txt
django_hw/hw_project/docs/: conf.py  index.rst
django_hw/hw_project/hw_project/: settings.py  urls.py
django_hw/hw_project/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py  views.py~
django_hw/hw_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
django_hw/hw_project/quotes/templatetags/: extract.py
django_hw/hw_project/users/: forms.py  models.py  signals.py  urls.py  views.py
django_hw/hw_project/users/migrations/: 0001_initial.py  0002_profile_reset_token.py  0003_remove_profile_reset_token_alter_profile_user.py  0004_alter_profile_avatar.py  0005_alter_profile_avatar.py
django_hw/hw_project/utils/: add_quotes_to_mongo.py  migration.py
fastapi_hw/: docker-compose.yml  main.py  pyproject.toml
fastapi_hw/migrations/: env.py
fastapi_hw/migrations/versions/: 1d493b4febce_init.py
fastapi_hw/postgres-data/base/1/: 2619  pg_internal.init
fastapi_hw/postgres-data/global/: 1260  pg_control  pg_internal.init
fastapi_hw/postgres-data/pg_stat/: pgstat.stat
fastapi_hw/postgres-data/pg_xact/: 0000
fastapi_hw/src/conf/: config.py
fastapi_hw/src/database/: db.py
fastapi_hw/src/entity/: models.py
fastapi_hw/src/repository/: contacts.py  users.py
fastapi_hw/src/routes/: auth.py  contacts.py  users.py
fastapi_hw/src/schemas/: contact.py  user.py
fastapi_hw/src/services/: auth.py  email.py  reset_pass.py
(+71 files in other folders)
