[tool.poetry]
name = "django-hw"
version = "0.1.0"
description = ""
authors = ["Alex <alexsa1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
pymongo = "^4.10.1"
psycopg2-binary = "^2.9.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
